# note-examples

./: README.md  jest.config.js  package-lock.json  package.json  vite.config.js
2-html/: index.html
course-c/: b
course-c/c1/: 02.hello-world.cpp  CMakeLists.txt
course-c/c2/: 01.data-types-int.cpp  02.data-types-char.cpp  03.data-types-float.cpp  04.variable.cpp  05.constant.cpp  05.out.cpp  06.operators.cpp  07.condition.cpp  08.loop.cpp  09.guess-number.cpp  CMakeLists.txt
course-c/c3/: 01.function-basic.cpp  02.proto_type.cpp  03.variable_types_and_scope.cpp  04.varargs.cpp  05.recursion.cpp  06.hanoi.cpp  CMakeLists.txt
engineering/jest/: testCase.js
engineering/jest/__tests__/: index.js
engineering/rollup/: a.js  package-lock.json  package.json
engineering/rollup/rollup-api/par/: pack.js  test-single.js  (+1 more)
examples/: App.vue
examples/router/: index.js
nodejs/core/fs/: 08-readline.js  data.txt
packagesx/babel/plugins/: c1.js
packagesx/patterns/factory/: abstract.ts  factoryfn.ts  jquery.ts  normal.ts  simple.ts
packagesx/vite-learn/: readme.md
packagesx/vite-learn/s2/: package-lock.json  package.json  vite.config.js
packagesx/vite-learn/s3/: index.js  output.js  package-lock.json  package.json
packagesx/vue3-demo/: package-lock.json
pkg-base/css/: 1-lineheight.vue
pkg-base/js/: promise-test.vue
pkg-cs/compiler/: 1-index.vue  tokenizer.js
pkg-cs/patterns/: observe.vue  singleton.vue
pkg-vue/mini-element-plus/: index.js
pkg-vue/snabbdom/: 1-basic.vue  2-basic.vue  3-modules.vue  4-patchArray.vue
sources/snabbdom/src/: init.ts
(+8 files in other folders)
